--- a/Loja/Mascaras.html
+++ b/Loja/Mascaras.html
@@ -9,10 +9,8 @@
 </head>
 <body>
     <h1>Tempo de Mascaras</h1>
-
-    <!--imgs>
-        <imgs-->
-
+<img src="./imagens/MascaraBrancaLado150.png">
+<img src="./imagens/MascaraPretaLado150.png">
         <ul>
             <li class="father">Caracteristicas:</li>
             <li class="child">Cores:preta e branca</li>
@@ -22,5 +20,6 @@
             <li class="child">Clip nasal interno ajustavel</li>
             <li class="child">Tamanho:P,M e G</li>
         </ul>
+
 </body>
 </html>
