--- a/Loja/Inicio.html
+++ b/Loja/Inicio.html
@@ -5,15 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="inicio.css">
+   </head> 
+    
 <body>
-    <form action="">
-        
-        <input type="text">
-
-        <input type="text">
-
-        <button>Send</button>
-    </form>
 </body>
 </html>
