--- a/Loja/Inicio.html
+++ b/Loja/Inicio.html
@@ -9,5 +9,17 @@
    </head> 
     
 <body>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Address</th>
+            
+        </tr>
+
+        <tr>
+            <td>joao</td>
+            <td>lucas</td>
+        </tr>
+    </table>
 </body>
 </html>
