--- a/Loja/Mascaras.html
+++ b/Loja/Mascaras.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <h1>Tempo de Mascaras</h1>
-<img src="./imagens/MascaraBrancaLado150.png">
-<img src="./imagens/MascaraPretaLado150.png">
+    <div class="imgs">
+        <img src="./imagens/MascaraBrancaLado150.png">
+        <img src="./imagens/MascaraPretaLado150.png">
+    </div>
+
         <ul>
-            <li class="father">Caracteristicas:</li>
+            <h3 class="father">Caracteristicas:</h3>
             <li class="child">Cores:preta e branca</li>
             <li class="child">Três camadas</li>
             <li class="child">Material 100% algodão</li>
